--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -137,6 +137,7 @@ a:focus {
 }
 .intro .intro-body .brand-heading {
   font-size: 40px;
+    color:black;
 }
 .intro .intro-body .intro-text {
   font-size: 18px;
@@ -308,7 +309,4 @@ img::selection {
 }
 img::-moz-selection {
   background: transparent;
-}
-body {
-  webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
 }
